--- a/views/index.erb
+++ b/views/index.erb
@@ -13,11 +13,11 @@
 
       <% items.each do |item| %>
         <tr>
-	  <td><%= item.attributes[:host].values[0] %></td>
-	  <td><a href="<%= item.attributes[:public_url].values[0] %>"><%= item.pkg %></a></td>
-	  <td><%= item.attributes[:date].values[0] %></td>
-	  <td><%= item.attributes[:pkg].values[0] %></td>
-	  <td><%= item.attributes[:matches].values[0] %></td>
+	  <td><%= item[:host] %></td>
+	  <td><a href="<%= item[:public_url] %>"><%= item[:pkg] %></a></td>
+	  <td><%= item[:date] %></td>
+	  <td><%= item[:pkg] %></td>
+	  <td><%= item[:matches] %></td>
 	</tr>
       <% end %>
     </table>
