Actually use the PNG versions (but keep the SVG in the repository as well).
The PNG version is actually much smaller and will likely work on more setups.

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
 	  <td><%= item[:host] %></td>
 	  <td>
 	    <a href="https://bugs.gentoo.org/enter_bug.cgi?<%= item[:bug_template].to_query %>">
-	      <img src="bug.svg" width="16px" height="16px" alt="[B]" />
+	      <img src="bug.png" width="16px" height="16px" alt="[B]" />
 	    </a>
 	    <a href="<%= item[:public_url] %>"><%= item[:pkg] %></a>
 	  </td>
@@ -25,10 +25,10 @@
 	  <td>
 	    <%= item[:matches] %>
 	    <% if item[:test_failed] %>
-	      <img src="magnifier.svg" width="16px" height="16px" alt="[TF]" />
+	      <img src="magnifier.png" width="16px" height="16px" alt="[TF]" />
 	    <% end %>
 	    <% if item[:pkg_failed] %>
-	      <img src="wrench.svg" width="16px" height="16px" alt="[BF]" />
+	      <img src="wrench.png" width="16px" height="16px" alt="[BF]" />
 	    <% end %>
 	  </td>
 	</tr>
