Set the shortcut icon value so that it doesn't search for favicon.ico.
Since bug.png is already being requested for sure, this also removes
one request altogether.

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Tinderbox results index</title>
+    <link rel="shortcut icon" href="/bug.png" />
   </head>
   <body>
     <table>
