--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
 	    <% if item[:pkg_failed] %>
 	      <img src="wrench.png" width="16px" height="16px" alt="[BF]" />
 	    <% end %>
-	    <% if item[:pkg_failed] %>
+	    <% if item[:collision] %>
 	      [C]
 	    <% end %>
 	  </td>
